--- a/pom.xml
+++ b/pom.xml
@@ -312,11 +312,11 @@
     <!-- 发布用中央仓库配置 -->
     <distributionManagement>
         <snapshotRepository>
-            <id>oss</id>
+            <id>sonatype-nexus-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
         <repository>
-            <id>oss</id>
+            <id>sonatype-nexus-staging</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
