--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -10,7 +8,7 @@
     </parent>
     <groupId>com.df4j</groupId>
     <artifactId>df4j-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>df4j-parent</name>
     <description>df4j-parent</description>
@@ -34,7 +32,7 @@
         <url>https://github.com/bestwxc/df4j-parent</url>
         <connection>scm:git:git@github.com:bestwxc/df4j-parent.git</connection>
         <developerConnection>scm:git:git@github.com:bestwxc/df4j-parent.git</developerConnection>
-        <tag>V${project.version}</tag>
+        <tag>V1.0.0</tag>
     </scm>
 
     <modules>
