--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,10 @@
                 <artifactId>maven-scm-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
