--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.df4j</groupId>
     <artifactId>df4j-parent</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>df4j-parent</name>
     <description>df4j-parent</description>
@@ -32,7 +32,7 @@
         <url>https://github.com/bestwxc/df4j-parent</url>
         <connection>scm:git:git@github.com:bestwxc/df4j-parent.git</connection>
         <developerConnection>scm:git:git@github.com:bestwxc/df4j-parent.git</developerConnection>
-        <tag>V1.0.1</tag>
+        <tag>V${project.version}</tag>
     </scm>
 
     <modules>
